# shieldMAN

./: .gitignore  README.md  README1.md  build.ps1  build.sh  main.py  pyproject.toml  runClient.ps1  runGUI.ps1  runServer.ps1  shield.py
src/: game.py  man.py  server.py  shield.py
src/message_board/: Board.py  MessageBoardClient.py  MessageBoardConnector.py  MessageBoardImpl.py
src/message_board/gui/: GuiExtention.py  MessageBoardClientGui.py  components.py
src/protos/message_board/: message_board.proto
src/server/: Exceptions.py  LiveClient.py  LiveServer.py
