[tool.poetry]
name = "shield"
version = "0.1.0"
description = ""
authors = ["Jonathan Sigrist <jSigrist@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tqdm = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"